<resources>
    <string name="res_dimen">w1920dp</string>
    <string name="Account">账  号</string>
    <string name="Cancel">取消</string>
    <string name="IdentifyingCode">短信验证码</string>
    <string name="InputAccount">请输入正确的激活码后再次激活</string>
    <string name="InputAccount2">请输入账号</string>
    <string name="InputAccountHint1">请输入手机号/邮箱</string>
    <string name="InputAccountHint2">请输入手机号</string>
    <string name="InputMessagecode">请输入短信验证码</string>
    <string name="InputMessagecodeHint1">请输入短信验证码</string>
    <string name="InputPassword">请输入正确的验证码后再次激活</string>
    <string name="InputPasswordHint1">请输入密码</string>
    <string name="InputVerifycode">请输入图片验证码</string>
    <string name="InputVerifycodeHint1">请输入右侧验证码</string>
    <string name="Login">登录</string>
    <string name="LoginTip">马上登录</string>
    <string name="OK">确定</string>
    <string name="Password">密  码</string>
    <string name="Register">注册</string>
    <string name="RegisterTip">免费注册</string>
    <string name="Verifycode">图片验证码</string>
    <string name="abort_net_diagnosis">退出诊断</string>
    <string name="account_conflict_mess">您的账号有安全风险，请进入安全中心扫码修改密码以保障账号安全</string>
    <string name="account_conflict_ok">进入个人中心</string>
    <string name="account_error_a00001">您的账号存在一定风险，为了保障您的安全，请重新登录</string>
    <string name="account_error_a00005">您的账号有变更，为了保障您的安全，请重新登录</string>
    <string name="account_error_a00055">您的网络位置变化，为了您的账号安全，请重新登录</string>
    <string name="account_error_a00056">您的登录设备变化，为了保障您的安全，请重新登录</string>
    <string name="account_error_multi_people">您的 VIP 账号正在被多人使用， \n 现在无法使用该账号播放视频。 \n 请到账号提供方处修改密码恢复播放</string>
    <string name="account_error_multi_place">您的 VIP 账号存在多地登录异常， \n 已经为您开启临时保护措施。 \n 请到账号提供方验证手机号解除锁定</string>
    <string name="account_error_password_changed">你的账号存在异常，请重新登录观看</string>
    <string name="account_verify_fail">您的账号有变更，为了保障您的账号安全，请重新登录</string>
    <string name="activate_tip">请使用TV专用激活码激活</string>
    <string name="ad_tip">开通VIP套餐，即刻跳过广告</string>
    <string name="adapter_switch_reset">适配开关重置</string>
    <string name="add_tab_dialog_cancel">取消</string>
    <string name="add_tab_dialog_content">最近喜欢看%1$s类节目吗~\n把%1$s频道添加到导航栏，观看更方便</string>
    <string name="add_tab_dialog_ok">添加</string>
    <string name="add_tab_toast_content_failure">添加失败了，可到桌面管理页面中重试添加</string>
    <string name="add_tab_toast_content_success">已将%1$s频道添加到导航栏</string>
    <string name="add_to_favorite">收藏</string>
    <string name="added_to_favorite">已收藏</string>
    <string name="album_can_select">按&lt;font color=\'#ffb400\'&gt;【菜单键】&lt;/font&gt;可以筛选哦~</string>
    <string name="album_detail_data_loading">全力加载中...</string>
    <string name="album_detail_login_toast">登录后即可收藏更多影片~</string>
    <string name="album_detail_window_error_tip">哎呀！没播出来\n点全屏可帮我诊断一二</string>
    <string name="album_item_tvcount">更新至 %s 集</string>
    <string name="album_item_tvset">%s 集全</string>
    <string name="album_item_update">%s期</string>
    <string name="album_list_loading">全力加载中...</string>
    <string name="album_no_content">暂无相关内容，去看看别的内容吧~</string>
    <string name="album_tip_above">桌面数量已达上限，隐藏不常看的再添加吧~</string>
    <string name="albumlist_networksetting">网络设置</string>
    <string name="albumlist_no_network">数据暂未加载成功，\n 请检查网络或稍后再试</string>
    <string name="albumlist_setting">设置</string>
    <string name="albumlist_setting_speed">网络测速</string>
    <string name="already_jump">尊敬的会员，已为您跳过</string>
    <string name="alter_menu_tip">按</string>
    <string name="alter_menukey_text">菜单键</string>
    <string name="api_code_is_null">接口返回错误码为空</string>
    <string name="api_url_is_null">接口返回url为空</string>
    <string name="app_dialog_text">排序靠前的应用将出现在首页</string>
    <string name="app_item_count">个</string>
    <string name="app_lock_tip">前%s个系统应用无法置顶</string>
    <string name="app_menu_recovery_tip_head">将</string>
    <string name="app_menu_recovery_tip_tail">恢复到出厂时的版本</string>
    <string name="app_menu_system_tip">是系统应用，无法卸载</string>
    <string name="app_menu_uninstall_tip">卸载</string>
    <string name="app_name">银河奇异果</string>
    <string name="app_name_gitv">银河影视</string>
    <string name="app_name_litchi">荔枝TV</string>
    <string name="app_tab_all_app">全部应用</string>
    <string name="apps_album_list_loading">全力加载中......</string>
    <string name="apps_album_no_content">暂时没有相关应用，您可以选择其他分类</string>
    <string name="apps_appdetails_action_clear">清除</string>
    <string name="apps_appdetails_action_download">下载</string>
    <string name="apps_appdetails_action_downloading">下载中</string>
    <string name="apps_appdetails_action_instal_phone">安装到手机</string>
    <string name="apps_appdetails_action_install">安装</string>
    <string name="apps_appdetails_action_installing">安装中</string>
    <string name="apps_appdetails_action_on_top">置顶</string>
    <string name="apps_appdetails_action_open">打开</string>
    <string name="apps_appdetails_action_uninstall">卸载</string>
    <string name="apps_appdetails_action_update">更新</string>
    <string name="apps_appdetails_action_updating">更新中</string>
    <string name="apps_appdetails_back">返回</string>
    <string name="apps_appdetails_category">类型：</string>
    <string name="apps_appdetails_description">游戏详情</string>
    <string name="apps_appdetails_download">下载：</string>
    <string name="apps_appdetails_preview">图片预览</string>
    <string name="apps_appdetails_progress_clearing">正在清除...</string>
    <string name="apps_appdetails_progress_downloading">正在下载...</string>
    <string name="apps_appdetails_progress_installing">正在安装...</string>
    <string name="apps_appdetails_progress_uninstalling">正在卸载...</string>
    <string name="apps_appdetails_progress_updating">正在更新...</string>
    <string name="apps_appdetails_recommendation">相关推荐</string>
    <string name="apps_appdetails_size">大小：</string>
    <string name="apps_appdetails_version">更新日期：</string>
    <string name="apps_cancel">取消</string>
    <string name="apps_category_activity_default_num">0</string>
    <string name="apps_category_activity_default_slash">/</string>
    <string name="apps_category_activity_default_text">0个</string>
    <string name="apps_category_num_default">0个</string>
    <string name="apps_category_title_default">默认数据</string>
    <string name="apps_common_category">应用分类</string>
    <string name="apps_describe">按菜单键选择其他分类</string>
    <string name="apps_exit">取消</string>
    <string name="apps_game_category">游戏分类</string>
    <string name="apps_hisense_search_net_timeout">操作失败，请检查网络或稍后重试</string>
    <string name="apps_hot_word_title">热门搜索</string>
    <string name="apps_myapps_category_default">分类</string>
    <string name="apps_myapps_info">按菜单键卸载或置顶应用</string>
    <string name="apps_myapps_menu_detail">详情</string>
    <string name="apps_myapps_my_account">我的账号</string>
    <string name="apps_myapps_my_default">我的应用</string>
    <string name="apps_myapps_unknown_app">未知应用</string>
    <string name="apps_name">银河应用商店</string>
    <string name="apps_necessary_apps_category">装机必备</string>
    <string name="apps_netstate_error">当前网络未连接</string>
    <string name="apps_newest_version">检测到最新版本</string>
    <string name="apps_no_data_error">暂未获取到数据</string>
    <string name="apps_no_search_result">没有您要搜索的应用</string>
    <string name="apps_ok">确定</string>
    <string name="apps_search_app_title">应用名称</string>
    <string name="apps_search_category">分类：</string>
    <string name="apps_search_edittect_hint">请输入应用的首字母进行搜索</string>
    <string name="apps_search_history_title">搜索历史</string>
    <string name="apps_search_result">抱歉，没有找到您要的应用</string>
    <string name="apps_search_search">搜索</string>
    <string name="apps_search_title">应用搜索</string>
    <string name="apps_search_top_all">共有</string>
    <string name="apps_search_top_app_title">应用名称</string>
    <string name="apps_search_top_ge">个搜索结果</string>
    <string name="apps_search_top_num">0</string>
    <string name="apps_search_version">版本：</string>
    <string name="apps_server_result_error">服务器数据返回异常</string>
    <string name="apps_update">升级</string>
    <string name="apps_update_access_error">升级失败，服务器数据异常</string>
    <string name="apps_update_fail">安装失败</string>
    <string name="apps_update_imm">立即升级</string>
    <string name="apps_update_install_error">升级失败，安装过程异常</string>
    <string name="apps_update_network_error">升级失败，请检查网络连接情况</string>
    <string name="apps_update_new_feature">新增功能：</string>
    <string name="apps_update_title">AppStore有更新</string>
    <string name="apps_updating">正在升级，请稍候...</string>
    <string name="apps_video_play_guess_you_like_no_conn">获取信息失败，请稍后重试或检查网络</string>
    <string name="arefresh_login_cancel">取消</string>
    <string name="arefresh_login_ok">重新登录</string>
    <string name="average_speed">平均速度：</string>
    <string name="back">返回</string>
    <string name="back_key_toast">按&lt;font color=\'#ffb400\'&gt;【返回键】&lt;/font&gt;可以快速回到顶部哦~</string>
    <string name="bt_open_vip">开通VIP会员免费看</string>
    <string name="bt_upgrade_vip">升级VIP会员免费看</string>
    <string name="btn_buy_album">购买本片</string>
    <string name="btn_coupon">用券看</string>
    <string name="btn_join_vip">开通VIP</string>
    <string name="btn_login_text">立即登录</string>
    <string name="btn_login_tip">使用其它方式登录</string>
    <string name="btn_vip_rights_tip">在电视上领取</string>
    <string name="buy_album">尊敬的用户：\n本节目为付费内容，完整观看请购买本片</string>
    <string name="buy_album_from_other">尊敬的用户：\n本节目为付费内容，完整观看请在其他平台购买本片</string>
    <string name="cancel_test">取消测速</string>
    <string name="cannot_conn_internet">@string/speed_test_network_error</string>
    <string name="cannot_push_live_video">哎呀~暂不支持投屏播放此内容哦~</string>
    <string name="carousel_list_error">哎呀，出错了</string>
    <string name="carousel_playing_next">即将播放:</string>
    <string name="carousel_window_name">轮播小窗口</string>
    <string name="change_channel">上下键 - 换频道</string>
    <string name="change_skin_frequent_finish">时差倒的太频繁啦~</string>
    <string name="change_skin_hint">已为您切换至%1$s</string>
    <string name="channel_list">OK键 - 频道列表</string>
    <string name="check_network">正在检测网络，请稍候</string>
    <string name="check_update_exception">检测失败，请检查网络！</string>
    <string name="checking_update">正在检查更新，请稍候…</string>
    <string name="click_recommand_tip">正在全力加载，请稍候</string>
    <string name="click_shop_tip">您可以免费体验240元/年的VIP影片手机推屏服务，不需要VIP账号也能通过手机推片到电视观看VIP大片</string>
    <string name="close_jump_header">关闭</string>
    <string name="close_message">关闭此开关，您将不能及时收到消息提醒哦~</string>
    <string name="cnd">服务器</string>
    <string name="comfirm">确定</string>
    <string name="comm_regist_timetip">%s秒后获取</string>
    <string name="common_api_error_msg">出错了…… 请稍后再试。\n错误码：%s</string>
    <string name="dhr_guide_toggle_tip">（提示：开启HDR后可享受更好的视觉体验）</string>
    <string name="fault_feedback_desc">遇到故障后，请尽快按以下方法反馈故障，以保证故障被精准定位</string>
    <string name="fault_feedback_method1">方法一</string>
    <string name="fault_feedback_method1_button">故障反馈</string>
    <string name="fault_feedback_method1_step1">立即到此页面点击“故障反馈”按钮</string>
    <string name="fault_feedback_method1_step2">扫描屏幕中出现的二维码，描述故障信息</string>
    <string name="fault_feedback_method2">方法二</string>
    <string name="fault_feedback_method2_step1">立即连按5次菜单键反馈故障</string>
    <string name="fault_feedback_title">故障反馈</string>
    <string name="hdr_definition_text">清晰度：</string>
    <string name="hdr_toggle_text">HDR：</string>
    <string name="ip_address">IP地址：</string>
    <string name="mycenter_uid">U     I    D ：%s</string>
    <string name="mycenter_uname">用  户  名：%s</string>
    <string name="mycenter_ustatus">会员状态：%s</string>
    <string name="speed_test_complete">测试已完成</string>
    <string name="speed_test_retry">重新测速</string>
    <string name="speed_test_sharpness">建议清晰度：</string>
    <string name="switch_ad_cache">关闭广告缓存</string>
    <string name="switch_ad_seek_start">广告seek after start</string>
    <string name="switch_h211">开启播放H211</string>
    <string name="switch_movie_seek_start">正片seek after start</string>
    <string name="system_info_tester">系统信息监测</string>
</resources>