<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <Button android:textSize="@dimen/dimen_30dp" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/btn_system_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_18dp" android:text="@string/system_info_tester" />
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <CheckBox android:textSize="@dimen/dimen_30dp" android:textColor="@color/white" android:id="@id/cb_h211" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_30dp" android:text="@string/switch_h211" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
        <CheckBox android:textSize="@dimen/dimen_30dp" android:textColor="@color/white" android:id="@id/cb_movie_seek_start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_30dp" android:text="@string/switch_movie_seek_start" android:layout_below="@id/cb_h211" android:layout_alignParentLeft="true" />
        <CheckBox android:textSize="@dimen/dimen_30dp" android:textColor="@color/white" android:id="@id/cb_ad_seek_start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_30dp" android:text="@string/switch_ad_seek_start" android:layout_below="@id/cb_movie_seek_start" android:layout_alignParentLeft="true" />
        <CheckBox android:textSize="@dimen/dimen_30dp" android:textColor="@color/white" android:id="@id/cb_ad_cache" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_30dp" android:text="@string/switch_ad_cache" android:layout_below="@id/cb_ad_seek_start" android:layout_alignParentLeft="true" />
    </RelativeLayout>
    <Button android:textSize="@dimen/dimen_30dp" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/btn_reset" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/adapter_switch_reset" />
</LinearLayout>
