<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@id/epg_app_icon_result" android:layout_width="UNKNOWN_DATA_0x7f080baa" android:layout_height="UNKNOWN_DATA_0x7f080ba9" android:layout_marginLeft="@dimen/album_title_button_marginleft" android:layout_marginTop="@dimen/album_title_button_margintop" android:src="@drawable/epg_title_button" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:contentDescription="@string/app_name" />
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
        <TextView android:textSize="@dimen/dimen_32dp" android:textColor="@color/album_list_default_text_color" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/epg_app_title_text_result" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/album_channel_name_marginleft" android:layout_marginTop="@dimen/album_channel_name_margintop" android:text="@string/albumlist_setting_speed" android:layout_alignParentLeft="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/epg_content_container_result" android:background="@drawable/epg_setting_bg" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="@dimen/dimen_55dp" android:layout_marginTop="@dimen/dimen_106dp" android:layout_marginRight="@dimen/dimen_55dp" android:layout_marginBottom="@dimen/dimen_80dp" />
    <TextView android:textSize="@dimen/dimen_27dp" android:textColor="#fff1f1f1" android:id="@id/epg_txt_info_result" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_280dp" android:text="@string/speed_test_complete" android:layout_centerHorizontal="true" />
    <RelativeLayout android:id="@id/epg_info" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_257dp" android:layout_marginTop="@dimen/dimen_58dp" android:layout_below="@id/epg_txt_info_result">
        <TextView android:id="@id/epg_txt_ip_title" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:textSize="@dimen/dimen_20dp" android:textColor="#fff1f1f1" android:id="@id/epg_txt_speed_ip_result" android:layout_width="UNKNOWN_DATA_0x7f080645" android:layout_height="wrap_content" android:text="@string/ip_address" />
        <TextView android:textSize="@dimen/dimen_20dp" android:textColor="#fff1f1f1" android:id="@id/epg_txt_speed_average_icon_result" android:layout_width="UNKNOWN_DATA_0x7f080201" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_45dp" android:text="@string/average_speed" android:layout_toRightOf="@id/epg_txt_speed_ip_result" />
        <TextView android:textSize="@dimen/dimen_20dp" android:textColor="#ffffb400" android:id="@id/epg_txt_speed_average_result" android:layout_width="UNKNOWN_DATA_0x7f080431" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_5dp" android:layout_toRightOf="@id/epg_txt_speed_average_icon_result" />
        <TextView android:textSize="@dimen/dimen_20dp" android:textColor="#fff1f1f1" android:id="@id/epg_txt_sharpness_recommend" android:layout_width="UNKNOWN_DATA_0x7f0802e1" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_45dp" android:text="@string/speed_test_sharpness" android:layout_toRightOf="@id/epg_txt_speed_average_result" />
        <TextView android:textSize="@dimen/dimen_20dp" android:textColor="#ffffb400" android:id="@id/epg_txt_sharpness" android:layout_width="UNKNOWN_DATA_0x7f080431" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_10dp" android:layout_toRightOf="@id/epg_txt_sharpness_recommend" />
        <TextView android:textSize="@dimen/dimen_20dp" android:textColor="#fff1f1f1" android:id="@id/epg_txt_none_sharpness" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_45dp" android:layout_toRightOf="@id/epg_txt_speed_average_result" />
    </RelativeLayout>
    <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/epg_btn_cancel_result" android:background="@drawable/share_item_rect_selector" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_150dp" android:layout_below="@id/epg_info" android:layout_centerHorizontal="true">
        <Button android:textSize="@dimen/dimen_24dp" android:textColor="#f1f1f1" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/epg_btn_cancel_test_result" android:background="@color/gala_green" android:focusable="true" android:layout_width="UNKNOWN_DATA_0x7f080687" android:layout_height="UNKNOWN_DATA_0x7f080815" android:text="@string/speed_test_retry" />
    </LinearLayout>
</RelativeLayout>
