<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@id/epg_img_ucenter_head_bg" android:layout_width="UNKNOWN_DATA_0x7f08032f" android:layout_height="UNKNOWN_DATA_0x7f080692" android:src="@drawable/epg_ucenter_no_login_bg" android:scaleType="fitXY" />
    <ImageView android:id="@id/epg_img_ucenter_head" android:layout_width="UNKNOWN_DATA_0x7f08089c" android:layout_height="UNKNOWN_DATA_0x7f0808f2" android:layout_marginLeft="@dimen/dimen_602dp" android:layout_marginTop="@dimen/dimen_53dp" android:src="@drawable/epg_ucenter_no_login_head" android:scaleType="fitXY" />
    <ImageView android:id="@id/epg_img_ucenter_eye" android:layout_width="UNKNOWN_DATA_0x7f080668" android:layout_height="UNKNOWN_DATA_0x7f080000" android:layout_marginLeft="@dimen/dimen_626dp" android:layout_marginTop="@dimen/dimen_97dp" android:src="@drawable/epg_ucenter_no_login_eyes" android:scaleType="fitXY" />
    <TextView android:textSize="@dimen/dimen_21sp" android:textColor="@color/albumview_normal_color" android:id="@id/epg_txt_ucenter_no_login_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_212dp" android:layout_centerHorizontal="true" />
    <TextView android:textSize="@dimen/dimen_20sp" android:id="@id/epg_txt_ucenter_uname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_500dp" android:layout_marginTop="@dimen/dimen_182dp" android:text="@string/mycenter_uname" android:includeFontPadding="false" />
    <TextView android:textSize="@dimen/dimen_20sp" android:id="@id/epg_txt_ucenter_uid" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_500dp" android:layout_marginTop="@dimen/dimen_216dp" android:text="@string/mycenter_uid" android:includeFontPadding="false" />
    <TextView android:textSize="@dimen/dimen_20sp" android:id="@id/epg_txt_ucenter_status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_500dp" android:layout_marginTop="@dimen/dimen_250dp" android:text="@string/mycenter_ustatus" android:includeFontPadding="false" />
    <Button android:textSize="@dimen/dimen_27sp" android:textColor="@drawable/epg_ucenter_btn_txt_color_selector" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/epg_btn_ucenter_login" android:background="@drawable/share_btn_corner_selector" android:layout_width="UNKNOWN_DATA_0x7f080621" android:layout_height="UNKNOWN_DATA_0x7f08079c" android:layout_marginTop="@dimen/dimen_268dp" android:text="@string/btn_login_text" android:includeFontPadding="false" android:layout_centerHorizontal="true" />
</RelativeLayout>
