<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@id/epg_setting_fault_feedback_layout" android:layout_width="match_parent" android:layout_height="match_parent"
    <RelativeLayout android:id="@id/epg_setting_title_layout" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x7f080714" android:layout_marginTop="@dimen/dimen_20dp" android:layout_marginRight="@dimen/dimen_32dp" android:layout_alignParentRight="true">
        <ImageView android:id="@id/epg_setting_title_icon" android:layout_width="UNKNOWN_DATA_0x7f0807a8" android:layout_height="UNKNOWN_DATA_0x7f080714" android:src="@drawable/epg_tab_icon_feedback" android:scaleType="fitXY" android:layout_centerVertical="true" />
        <View android:id="@id/epg_setting_title_line" android:background="@color/gray" android:layout_width="UNKNOWN_DATA_0x7f080607" android:layout_height="match_parent" android:layout_marginLeft="@dimen/dimen_10dp" android:layout_toRightOf="@id/epg_setting_title_icon" />
        <TextView android:textSize="@dimen/dimen_32dp" android:textColor="@color/setting_white" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/epg_setting_title_name" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="@dimen/dimen_10dp" android:text="@string/fault_feedback_title" android:includeFontPadding="false" android:layout_toRightOf="@id/epg_setting_title_line" />
    </RelativeLayout>
    <TextView android:textSize="@dimen/dimen_27dp" android:textColor="@color/search_nothing_text" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/epg_setting_title_desc" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_127dp" android:text="@string/fault_feedback_desc" android:includeFontPadding="false" />
    <RelativeLayout android:id="@id/epg_setting_content_layout" android:background="#19f1f1f1" android:layout_width="UNKNOWN_DATA_0x7f080255" android:layout_height="UNKNOWN_DATA_0x7f08073a" android:layout_marginTop="@dimen/dimen_210dp" android:layout_centerHorizontal="true">
        <TextView android:textSize="@dimen/dimen_20dp" android:textColor="@color/albumview_normal_color" android:id="@id/epg_setting_method1_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_76dp" android:layout_marginTop="@dimen/dimen_67dp" android:text="@string/fault_feedback_method1" android:includeFontPadding="false" />
        <ImageView android:id="@id/epg_setting_method1_step1_icon" android:layout_width="UNKNOWN_DATA_0x7f08062b" android:layout_height="UNKNOWN_DATA_0x7f080637" android:layout_marginTop="@dimen/dimen_48dp" android:src="@drawable/epg_setting_feedback_step1" android:scaleType="fitXY" android:layout_below="@id/epg_setting_method1_text" android:layout_alignLeft="@id/epg_setting_method1_text" />
        <View android:id="@id/epg_setting_method1_step1_line" android:background="@color/setting_feedback_divide_line" android:layout_width="UNKNOWN_DATA_0x7f080607" android:layout_height="UNKNOWN_DATA_0x7f080768" android:layout_marginLeft="@dimen/dimen_86dp" android:layout_marginTop="@dimen/dimen_01dp" android:layout_marginBottom="@dimen/dimen_01dp" android:layout_below="@id/epg_setting_method1_step1_icon" />
        <ImageView android:id="@id/epg_setting_method1_step2_icon" android:layout_width="UNKNOWN_DATA_0x7f08062b" android:layout_height="UNKNOWN_DATA_0x7f080637" android:src="@drawable/epg_setting_feedback_step2" android:scaleType="fitXY" android:layout_below="@id/epg_setting_method1_step1_line" android:layout_alignLeft="@id/epg_setting_method1_text" />
        <TextView android:textSize="@dimen/dimen_20dp" android:textColor="@color/albumview_normal_color" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/epg_setting_method1_step1_text" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x7f080637" android:layout_marginLeft="@dimen/dimen_13dp" android:text="@string/fault_feedback_method1_step1" android:layout_toRightOf="@id/epg_setting_method1_step1_icon" android:layout_alignBottom="@id/epg_setting_method1_step1_icon" />
        <TextView android:textSize="@dimen/dimen_20dp" android:textColor="@color/albumview_normal_color" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/epg_setting_method1_step2_text" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x7f080637" android:layout_marginLeft="@dimen/dimen_13dp" android:text="@string/fault_feedback_method1_step2" android:layout_toRightOf="@id/epg_setting_method1_step2_icon" android:layout_alignBottom="@id/epg_setting_method1_step2_icon" />
        <Button android:textSize="@dimen/dimen_24dp" android:textColor="#f1f1f1" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/epg_setting_feedback_button" android:background="@drawable/share_item_rect_btn_selector" android:paddingLeft="@dimen/dimen_85dp" android:paddingRight="@dimen/dimen_85dp" android:focusable="true" android:layout_width="UNKNOWN_DATA_0x7f080659" android:layout_height="UNKNOWN_DATA_0x7f0808fe" android:layout_marginLeft="@dimen/dimen_136dp" android:layout_marginBottom="@dimen/dimen_64dp" android:text="@string/fault_feedback_method1_button" android:layout_alignParentBottom="true" />
        <View android:id="@id/epg_setting_vertical_divide_line" android:background="@color/setting_feedback_divide_line" android:layout_width="UNKNOWN_DATA_0x7f080607" android:layout_height="match_parent" android:layout_marginTop="@dimen/dimen_71dp" android:layout_marginBottom="@dimen/dimen_76dp" android:layout_centerHorizontal="true" />
        <TextView android:textSize="@dimen/dimen_20dp" android:textColor="@color/albumview_normal_color" android:id="@id/epg_setting_method2_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_76dp" android:text="@string/fault_feedback_method2" android:includeFontPadding="false" android:layout_toRightOf="@id/epg_setting_vertical_divide_line" android:layout_alignBottom="@id/epg_setting_method1_text" />
        <ImageView android:id="@id/epg_setting_method2_step1_icon" android:layout_width="UNKNOWN_DATA_0x7f08062b" android:layout_height="UNKNOWN_DATA_0x7f080637" android:src="@drawable/epg_setting_feedback_step1" android:scaleType="fitXY" android:layout_alignLeft="@id/epg_setting_method2_text" android:layout_alignBottom="@id/epg_setting_method1_step1_icon" />
        <View android:id="@id/epg_setting_method2_step1_line" android:background="@color/setting_feedback_divide_line" android:layout_width="UNKNOWN_DATA_0x7f080607" android:layout_height="UNKNOWN_DATA_0x7f080768" android:layout_marginLeft="@dimen/dimen_86dp" android:layout_marginTop="@dimen/dimen_01dp" android:layout_marginBottom="@dimen/dimen_01dp" android:layout_toRightOf="@id/epg_setting_vertical_divide_line" android:layout_alignBottom="@id/epg_setting_method1_step1_line" />
        <ImageView android:id="@id/epg_setting_method2_step2_icon" android:layout_width="UNKNOWN_DATA_0x7f08062b" android:layout_height="UNKNOWN_DATA_0x7f080637" android:src="@drawable/epg_setting_feedback_step2" android:scaleType="fitXY" android:layout_alignLeft="@id/epg_setting_method2_text" android:layout_alignBottom="@id/epg_setting_method1_step2_icon" />
        <TextView android:textSize="@dimen/dimen_20dp" android:textColor="@color/albumview_normal_color" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/epg_setting_method2_step1_text" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x7f080637" android:layout_marginLeft="@dimen/dimen_13dp" android:text="@string/fault_feedback_method2_step1" android:layout_toRightOf="@id/epg_setting_method2_step1_icon" android:layout_alignBottom="@id/epg_setting_method1_step1_icon" />
        <TextView android:textSize="@dimen/dimen_20dp" android:textColor="@color/albumview_normal_color" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/epg_setting_method2_step2_text" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x7f080637" android:text="@string/fault_feedback_method1_step2" android:layout_alignLeft="@id/epg_setting_method2_step1_text" android:layout_alignBottom="@id/epg_setting_method1_step2_icon" />
    </RelativeLayout>
</RelativeLayout>
