<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="match_parent"
    <RelativeLayout android:orientation="horizontal" android:id="@id/ll_definition" android:clipChildren="false" android:clipToPadding="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/player_radiogroup_margin_left">
        <TextView android:textSize="@dimen/dimen_20dp" android:textColor="@color/default_text_color_normal" android:id="@id/definition_txt" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_28dp" android:layout_marginRight="@dimen/dimen_16dp" android:text="@string/hdr_definition_text" />
        <HorizontalScrollView android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/rg" android:focusable="false" android:scrollbars="UNKNOWN_DATA_0x0" android:layout_width="match_parent" android:layout_height="wrap_content" android:fillViewport="true" android:layout_toRightOf="@id/definition_txt">
            <com.gala.video.widget.MyRadioGroup android:id="@id/rg_definition" android:focusable="true" android:nextFocusLeft="@id/rg_definition" android:nextFocusRight="@id/rg_definition" android:nextFocusUp="0x1020013" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </HorizontalScrollView>
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_hdr_layout" android:visibility="gone" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0802e1" android:layout_marginLeft="@dimen/player_radiogroup_margin_left" android:layout_marginTop="@dimen/dimen_014dp" android:layout_below="@id/ll_definition">
        <TextView android:textSize="@dimen/dimen_20dp" android:textColor="@color/default_text_color_normal" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginTop="@dimen/dimen_014dp" android:text="@string/hdr_toggle_text" />
        <com.gala.video.widget.MyRadioGroup android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/rg_definition2" android:focusable="true" android:nextFocusLeft="@id/rg_definition2" android:nextFocusRight="@id/rg_definition2" android:nextFocusUp="@id/rg_definition" android:nextFocusDown="@id/rg_definition2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_36dp" />
        <TextView android:textSize="@dimen/dimen_16dp" android:textColor="@color/player_ui_common_error_tip_main" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="@dimen/dimen_010dp" android:layout_marginTop="@dimen/dimen_05dp" android:text="@string/dhr_guide_toggle_tip" />
    </LinearLayout>
</RelativeLayout>
